--- a/css/admin.css
+++ b/css/admin.css
@@ -27,9 +27,10 @@ h2 {
   left: 0;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid #858585;
   background-color: white;
   z-index: 10;
+  border-bottom: 3px solid #a45db6;
+  box-shadow: 0 3px 10px 3px rgb(167, 167, 167);
 }
 
 .music-edit-container {
@@ -107,7 +108,7 @@ th {
 }
 
 .user-table-tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #dddddd81;
 }
 
 .user-item-show {
@@ -218,10 +219,10 @@ th {
 .admin-page-nav {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
-.admin-page-nav > a {
+.admin-page-nav a {
   height: 100%;
   padding: 0 20px 0 20px;
   font-size: 20px;
@@ -234,7 +235,25 @@ th {
   color: black;
 }
 
-.admin-page-nav > a:hover {
-  background-color: #6b6b6b;
+.admin-page-nav a:hover {
+  background-color: #a45db6;
   color: white;
+}
+
+.admin-page-nav img {
+  height: 90%;
+  aspect-ratio: 1/1;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.admin-page-nav div {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.admin-page-nav p {
+  font-size: 20px;
 }
