--- a/css/moreInfo.css
+++ b/css/moreInfo.css
@@ -39,13 +39,13 @@ nav {
   position: sticky;
   top: 0;
   left: 0;
-
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid #a45db6;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
+  box-shadow: 0 3px 10px 3px rgb(167, 167, 167);
 }
-nav > a {
+nav a {
   height: 100%;
   padding: 0 20px 0 20px;
   font-size: 18px;
@@ -54,11 +54,29 @@ nav > a {
   justify-content: center;
   font-weight: bold;
   text-decoration: none;
+  color: black;
 }
 
-nav > a:hover {
-  background-color: seagreen;
+nav a:hover {
+  background-color: #a45db6;
   color: white;
+}
+nav img {
+  height: 90%;
+  aspect-ratio: 1/1;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+nav div {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+nav p {
+  font-size: 20px;
 }
 
 section {
@@ -66,13 +84,19 @@ section {
 }
 
 .note-info {
-  border: 1px solid black;
-  width: 300px;
   height: 500px;
   position: relative;
   top: 30px;
   margin-left: 15px;
   border-radius: 10px;
+}
+
+.note-info h3 {
+  margin-bottom: 10px;
+}
+
+.note-info div {
+  margin-bottom: 40px;
 }
 
 .dis-none {
